Section on "Measuring and reporting performance technique"

--- a/applications.tex
+++ b/applications.tex
@@ -125,7 +125,7 @@ Application parameters \textit{PROCROWS, PROCCOLS, ROWBLOCK} and \textit{COLBLOC
 
 \subsubsection{Large-scale CFD applications}
 
-A wide variaty of GSS applications -- from evacuation planning [8] to air quality control [6] –
+A wide variaty of GSS applications -- from evacuation planning \cite{2011:Epstein} to air quality control \cite{CHEMEL2014410} –
 rely on coupling of ABMS with CFD. The group of benchmarked CFD applications includes large
 scale tools that simulate GSS-related scenarios like natural disasters (hurricanes, earthquakes),
 spread of air pollution, and weather prediction. We selected 4 exemplar open-source codes for
@@ -136,10 +136,10 @@ large-scale CFD simulations:
   case of earthquakes;
 \item CMAQ -- a community multiscale air quality modelling system, which was successfully
   used for conducting large scale air quality simulations and policy making for air pollution
-  control [6];
+  control \cite{CHEMEL2014410};
 \item CM1 -- a model for studying processes in the Earth’s atmosphere, which can be used
   for weather prediction in different GSS applications where behaviour of agents in ABMS
-  component of GSS model depents on weather (e.g., predicting refugee destinations [19]);
+  component of GSS model depents on weather (e.g., predicting refugee destinations \cite{Suleimenova2017});
 \item HRWF -- a parallel implementation of the hurricane weather research and forecasting (HWRF),
   which is suitable for evacuation planning in case of hurricanes.
 \end{itemize}
