--- a/example.bib
+++ b/example.bib
@@ -228,7 +228,7 @@ lastaccessed = "December 1, 2018",
 }
 
 @techreport{2015:power8,
-  author = {Caldeira, Alexandre and Kahle, Marc-Eric and Saverimuthu, Gerard and Vearner, K.C.},
+  author = {Bicas Caldeira, Alexandre and Kahle, Marc-Eric and Saverimuthu, Gerard and Vearner, K.C.},
   title = {{IBM} Power Systems {S822LC}: Technical Overview and Introduction},
   institution = {International Technical Support Organization, International Business Machines Corporation},
   year = {2015},
@@ -441,3 +441,54 @@ author = "C. Chemel and B.E.A. Fisher and X. Kong and X.V. Francis and R.S. Sokh
 keywords = "Regional air quality, CMAQ, Limit values, Emissions inventory, Industrial footprint, Local traffic pollution",
 abstract = "This paper shows how the advanced chemical transport model CMAQ can be used to estimate future levels of PM2.5 in the UK, the key air pollutant in terms of human health effects, but one which is largely made up from the formation of secondary particulate in the atmosphere. By adding the primary particulate contribution from typical urban roads and including a margin for error, it is concluded that the current indicative limit value for PM2.5 will largely be met in 2020 assuming 2006 meteorological conditions. Contributions to annual average regional PM2.5 concentration from wild fires in Europe in 2006 and from possible climate change between 2006 and 2020 are shown to be small compared with the change in PM2.5 concentration arising from changes in emissions between 2006 and 2020. The contribution from emissions from major industrial sources regulated in the UK is estimated from additional CMAQ calculations. The potential source strength of these emissions is a useful indicator of the linearity of the response of the atmosphere to changes in emissions. Uncertainties in the modelling of regional and local sources are taken into account based on previous evaluations of the models. Future actual trends in emissions mean that exceedences of limit values may arise, and these and further research into PM2.5 health effects will need to be part of the future strategy to manage PM2.5 concentrations."
 }
+
+@inproceedings{2015:Hoefler,
+  author = {Hoefler, Torsten and Belli, Roberto},
+  title = {Scientific Benchmarking of Parallel Computing Systems: Twelve Ways to Tell the Masses when Reporting Performance Results},
+  booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+  series = {SC '15},
+  year = {2015},
+  isbn = {978-1-4503-3723-6},
+  location = {Austin, Texas},
+  pages = {73:1--73:12},
+  articleno = {73},
+  numpages = {12},
+  url = {http://doi.acm.org/10.1145/2807591.2807644},
+  doi = {10.1145/2807591.2807644},
+  acmid = {2807644},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {benchmarking, data analysis, parallel computing, statistics},
+} 
+
+@article{2011:Epstein,
+    author = {Epstein, Joshua M. AND Pankajakshan, Ramesh AND Hammond, Ross A.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Combining Computational Fluid Dynamics and Agent-Based Modeling: A New Approach to Evacuation Planning},
+    year = {2011},
+    month = {05},
+    volume = {6},
+    url = {https://doi.org/10.1371/journal.pone.0020139},
+    pages = {1-5},
+    abstract = {We introduce a novel hybrid of two fields—Computational Fluid Dynamics (CFD) and Agent-Based Modeling (ABM)—as a powerful new technique for urban evacuation planning. CFD is a predominant technique for modeling airborne transport of contaminants, while ABM is a powerful approach for modeling social dynamics in populations of adaptive individuals. The hybrid CFD-ABM method is capable of simulating how large, spatially-distributed populations might respond to a physically realistic contaminant plume. We demonstrate the overall feasibility of CFD-ABM evacuation design, using the case of a hypothetical aerosol release in Los Angeles to explore potential effectiveness of various policy regimes. We conclude by arguing that this new approach can be powerfully applied to arbitrary population centers, offering an unprecedented preparedness and catastrophic event response tool.},
+    number = {5},
+    doi = {10.1371/journal.pone.0020139}
+}
+
+@article{Suleimenova2017,
+author={Suleimenova, Diana
+and Bell, David
+and Groen, Derek},
+title={A generalized simulation development approach for predicting refugee destinations},
+journal={Scientific Reports},
+year={2017},
+volume={7},
+number={1},
+pages={13377},
+abstract={In recent years, global forced displacement has reached record levels, with 22.5 million refugees worldwide. Forecasting refugee movements is important, as accurate predictions can help save refugee lives by allowing governments and NGOs to conduct a better informed allocation of humanitarian resources. Here, we propose a generalized simulation development approach to predict the destinations of refugee movements in conflict regions. In this approach, we synthesize data from UNHCR, ACLED and Bing Maps to construct agent-based simulations of refugee movements. We apply our approach to develop, run and validate refugee movement simulations set in three major African conflicts, estimating the distribution of incoming refugees across destination camps, given the expected total number of refugees in the conflict. Our simulations consistently predict more than 75\% of the refugee destinations correctly after the first 12 days, and consistently outperform alternative naive forecasting techniques. Using our approach, we are also able to reproduce key trends in refugee arrival rates found in the UNHCR data.},
+issn={2045-2322},
+doi={10.1038/s41598-017-13828-9},
+url={https://doi.org/10.1038/s41598-017-13828-9}
+}
+
