--- a/paper.tex
+++ b/paper.tex
@@ -21,6 +21,16 @@
                     legend style={font=\tiny},
                     height=6cm
                     }}
+\usepackage{pgfkeys}
+    \newenvironment{customlegend}[1][]{%
+        \begingroup
+        \csname pgfplots@init@cleared@structures\endcsname
+        \pgfplotsset{#1}%
+    }{%
+        \csname pgfplots@createlegend\endcsname
+        \endgroup
+    }%
+    \def\addlegendimage{\csname pgfplots@addlegendimage\endcsname}
 
 %%\captionsetup[subfigure]{labelformat=simple} % default is 'parens'
 %%\captionsetup[subfigure]{width=0.9\textwidth}
