Decouple plots and text, fixed plots positioning.

--- a/paper.tex
+++ b/paper.tex
@@ -13,6 +13,7 @@
 \usepackage{geometry}
 \usepackage{pgfplots}
 \usepackage{tikz}
+\usepackage{float}
 \usetikzlibrary{patterns}
 \usepgfplotslibrary{groupplots}
 \pgfplotsset{compat=1.9, every axis/.append style={
